# FishEngine-ECS

./: .gitignore  CMakeLists.txt  Camera.hpp  ClassDef.hpp  ECS.cpp  ECS.hpp  Engine.hpp  GameApp.cpp  GameApp.hpp  Graphics.cpp  LICENSE  Light.hpp  Material.hpp  Math.hpp  Mesh.cpp  Mesh.hpp  README.md  RenderSystem.cpp  RenderSystem.hpp  Shader.cpp  TODO.md  TransformSystem.hpp  build.bat  build.sh  build_3rdparty.bat  build_3rdparty.sh  build_MiniEngine.bat  compile_shader.bat  compile_shader.py  compile_shader.sh  main.cpp
Assets/Textures/: uffizi_cross_128_filtered.dds
Doc/: Metal.md  ShaderCompiler.md  ShadingModel.md
Examples/: Editor.cpp  demo1.cpp  demo2.cpp  model_viewer.cpp  test_d3d12.cpp
Examples/Editor/: AppDelegate.m  Info.plist  Renderer.h  Renderer.mm  ViewController.mm
Examples/Editor/Base.lproj/: Main.storyboard
Examples/Experimental/: CMakeLists.txt  CommandContext.cpp  CommandContext.hpp  GameApp.cpp  GameApp.hpp  Graphics.cpp  Graphics.hpp  Graphics.mm  GraphicsPlatform.hpp  IMGUI.cpp  IMGUI.hpp  Mesh.hpp  build.bat  main.cpp  main.mm
Examples/Experimental/platform/macos/: Graphics.mm  main.mm
Examples/Experimental/platform/windows/: Graphics.cpp  IMGUI.cpp
Examples/Experimental/shaders/: compile.bat  pixel.hlsl  vertex.hlsl
Examples/ModelViewer/: ModelViewer.cpp  ModelViewer.h  main.cpp
FishEngine/: Camera.hpp  ECS.cpp  ECS.hpp  GameApp.cpp  GameApp.hpp  InputSystem.cpp  InputSystem.hpp  Math.hpp  Mesh.cpp  Mesh.hpp  Object.hpp  RenderSystem.cpp  RenderSystem.hpp  Renderable.hpp  TransformSystem.hpp
Include/: FishEditor.hpp  FishEngine.hpp
Include/FishEditor/: GLFWGameApp.hpp  GameApp.hpp  HierarchyView.hpp  InspectorArchive.hpp  SceneViewSystem.hpp
Include/FishEditor/Components/: FreeCamera.hpp  SingletonSelection.hpp
Include/FishEditor/Systems/: DrawGizmosSystem.hpp  EditorSystem.hpp  FreeCameraSystem.hpp  SceneViewSystem.hpp  SelectionSystem.hpp
Include/FishEngine/: Assets.hpp  Camera.hpp  ClassDef.hpp  ECS.hpp  Engine.hpp  Evnet.hpp  FishEngine.hpp  FreeCamera.hpp  GameApp.hpp  Gizmos.hpp  Graphics.hpp  GraphicsAPI.hpp  ISerializable.hpp  InputSystem.hpp  Light.hpp  Material.hpp  Math.hpp  Mesh.hpp  MeshVertex.hpp  Model.hpp  Object.hpp  RenderSystem.hpp  Renderable.hpp  Screen.hpp  Shader.hpp  ShaderD3D12.hpp  Texture.hpp  TransformSystem.hpp  bgfxHelper.hpp
Include/FishEngine/Components/: Animation.hpp  Animator.hpp  Camera.hpp  FreeCamera.hpp  Light.hpp  Renderable.hpp  SingletonInput.hpp  SingletonRenderState.hpp  SingletonSelection.hpp  SingletonTime.hpp  Transform.hpp
Include/FishEngine/ECS/: Component.hpp  GameObject.hpp  Scene.hpp  SingletonSystem.hpp  System.hpp
Include/FishEngine/Math/: Bounds.hpp  IntVector.hpp  Mathf.hpp  Matrix4x4.hpp  Matrix4x4.inl  Quaternion.hpp  Quaternion.inl  Ray.hpp  Rect.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Include/FishEngine/Render/: CameraFrustumCulling.hpp  D3D12Context.hpp  D3D12Utils.hpp  Handle.hpp  MeshImpl.hpp  RenderBuffer.hpp  RenderContext.hpp  RenderViewType.hpp  ShaderImpl.hpp  Window.h  game.h
Include/FishEngine/Render/D3D12/: CommandList.hpp  D3D12Context.hpp  D3D12Utils.hpp  DX12LibPCH.h  RootSignature.hpp  UploadBuffer.hpp
Include/FishEngine/Serialization/: Archive.hpp  Serialization.hpp
Include/FishEngine/Systems/: AnimationSystem.hpp  DrawGizmosSystem.hpp  EditorSystem.hpp  FreeCameraSystem.hpp  InputSystem.hpp  RenderSystem.hpp  SelectionSystem.hpp  TransformSystem.hpp
Include/FishEngine/Utils/: EnumFlags.hpp
Scripts/: gen_serialization.py  get_all_headers.py  reflect.py
Shaders/: Error.shader  PBR.shader  Skybox.shader  Texture.shader  VertexColor.shader  color.shader  cubes.sc  fs_cubes.sc  pbrMetallicRoughness.shader  shader.metal  varying.def.sc
Shaders/hlsl/: Color.hlsl  Error.hlsl  Internal-ErrorShader.hlsl  Normal.hlsl  Simple.hlsl  SimpleShading.hlsl  VertexColor.hlsl  VertexColor.shader  compile.bat  compile.py  compile_win.py  pbrMetallicRoughness.hlsl
Shaders/hlsl/include/: AppData.hlsl  BRDF.hlsl  Common.hlsl  ShaderVariables.hlsl  ShadingModels.hlsl
Shaders/include/: CGSupport.inc  HLSLSupport.inc
Shaders/temp/: pbrMetallicRoughness_skinned.shader
Source/FishEditor/: EditorSystem.cpp  FreeCameraSystem.cpp  GLFWGameApp.cpp  GameApp.cpp  InspectorArchive.cpp  SceneViewSystem.cpp  SelectionSystem.cpp
Source/FishEngine/: ECS.cpp  FreeCamera.cpp  FreeCameraSystem.cpp  GameApp.cpp  Gizmos.cpp  Graphics.cpp  GraphicsAPI.cpp  GraphicsAPI.mm  InputSystem.cpp  Material.cpp  Mesh.cpp  Model.cpp  Object.cpp  RenderSystem.cpp  Serialization.cpp  Shader.cpp  Texture.cpp
Source/FishEngine/Components/: Animation.cpp  Animator.cpp  Camera.cpp  Renderable.cpp  Transform.cpp
Source/FishEngine/Math/: Bounds.cpp  Mathf.cpp  Matrix4x4.cpp  Quaternion.cpp  Ray.cpp  Rect.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
Source/FishEngine/Render/: Application.cpp  CommandQueue.cpp  D3D12Context.cpp  D3D12WindowContext.hpp  Game.cpp  HighResolutionClock.cpp  RenderContext.cpp  Window.cpp
Source/FishEngine/Render/D3D12/: CommandList.cpp  Resource.cpp  ResourceStateTracker.cpp  RootSignature.cpp  UploadBuffer.cpp
Source/FishEngine/Systems/: EditorSystem.cpp  FreeCameraSystem.cpp  InputSystem.cpp  RenderSystem.cpp  SelectionSystem.cpp
Tools/ShaderCompiler/: toglsl.bat
Tools/UnityExporter/: Unity2glTF.cs
shader/: PBR.sc  cubes.sc  varying.def.sc  vs_cubes.sc
